<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context="com.techmax.datingsoon.Start.RemindActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="Complete Profile"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroupRemindGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioRemindMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            android:buttonTint="@color/colorPinkDark"
            android:onClick="radioButtonRemindGender"
            android:text="@string/male"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioRemindFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:buttonTint="@color/colorPinkDark"
            android:onClick="radioButtonRemindGender"
            android:text="@string/female"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RadioGroup>


    <TextView
        android:id="@+id/textViewRemindBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroupRemindGender"
        android:layout_marginBottom="30dp"
        android:background="@android:color/transparent"
        android:hint="@string/birthday"
        android:inputType="none"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnRemind"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextRemindPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPinkDark"
        android:gravity="center"
        android:text="Finish"
        android:textColor="@color/colorWhite"
        android:textSize="25sp" />


</LinearLayout>