<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:padding="10dp"
    app:cardElevation="0dp">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/roundedImageViewVisitsItemVisitsImage"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_image"
        app:riv_corner_radius="70dp"
        app:riv_mutate_background="true"
        app:riv_oval="false" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageViewVisitsItemVisitsOnline"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="46dp"
        android:src="@drawable/user_online"
        android:visibility="gone" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageViewVisitsItemVisitsOffline"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="46dp"
        android:src="@drawable/user_offline"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewVisitsItemVisitsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_toEndOf="@+id/roundedImageViewVisitsItemVisitsImage"
        android:layout_toRightOf="@+id/roundedImageViewVisitsItemVisitsImage"
        android:text="@string/full_name"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.github.curioustechizen.ago.RelativeTimeTextView
        android:id="@+id/RelativeTimeVisitsItemVisitsDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewVisitsItemVisitsName"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_toEndOf="@+id/roundedImageViewVisitsItemVisitsImage"
        android:layout_toRightOf="@+id/roundedImageViewVisitsItemVisitsImage"
        android:maxLines="1"
        android:text="@string/date"
        android:textColor="@color/colorGreyText"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewVisitsItemVisitsUnread"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="sans-serif-light"
        android:maxLines="1"
        android:text="@string/_0"
        android:textSize="16sp"
        android:visibility="gone" />

</RelativeLayout>